application view new implementation
